lots of cosmetic improvements, fixed the crash in group browsing, started implementing admin functionality

--- a/webserver/static/groupr.css
+++ b/webserver/static/groupr.css
@@ -29,3 +29,12 @@ nav {
 	padding-left: 10px;
 	text-decoration: none;
 }
+
+#container2 {
+	margin-left: 30px;
+	margin-right: 30px;
+}
+
+.input-group {
+	max-width: 400px;
+}
