--- a/webserver/templates/browse-groups.html
+++ b/webserver/templates/browse-groups.html
@@ -2,6 +2,7 @@
 {% block subtitle %}Browse Groups!{% endblock %}
 {% block content %}
 <h2>Courses</h2>
+<p class="lead">Select a course to view all sections of that course.</p>
 <br>
 <div class="list-group">
 	{% for item in courses %}
