--- a/webserver/templates/course.html
+++ b/webserver/templates/course.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <h2>Sections: {{course_name}}</h2>
+<p class="lead">Select a section to view all groups in that section!</p>
 <br>
 <div class="list-group">
 	{% for item in sections %}
