--- a/webserver/templates/group.html
+++ b/webserver/templates/group.html
@@ -40,6 +40,11 @@
 			</tr>
 
 			<tr>
+				<td>Status: </td>
+				<td>{{group.status}}</td>
+			</tr>
+
+			<tr>
 				<td>Admin: </td>
 				<td>{{admin}}</td>
 			</tr>
