--- a/webserver/templates/logged-in.html
+++ b/webserver/templates/logged-in.html
@@ -28,6 +28,10 @@
 
 		<br><br>
 
-		{% block content %}{% endblock %}
+		<div id="container2">
+			{% block content %}{% endblock %}
+		</div>
 	</div>
+
+	{% block modals %}{% endblock %}
 {% endblock %}
