--- a/webserver/templates/section.html
+++ b/webserver/templates/section.html
@@ -2,14 +2,19 @@
 {% block subtitle %}Section{% endblock %}
 
 {% block content %}
-<h2>Sections for {{course_title}}</h2>
+<h2>Groups in Section for {{course_title}}, call number {{call_number}}</h2>
+<p class="lead">Displaying all open groups in this section. </p>
 <br>
-<div class="list-group">
-	{% for item in groups %}
-	<a href="{{url_for('group', group_id=item.group_id)}}" class="list-group-item">
-		<h4 class="list-group-item-heading">{{item.group_name}}</h4>
-		<p class="list-group-item-text">Admin: {{item.user_email}} <br> Description: {{item.description}}</p>
-	</a>
-	{% endfor %}
-</div>
+{% if groups == [] %}
+	<h3><em>No groups to display!</em></h3>
+{% else %}
+	<div class="list-group">
+		{% for item in groups %}
+		<a href="{{url_for('group', group_id=item.group_id)}}" class="list-group-item">
+			<h4 class="list-group-item-heading">{{item.group_name}}</h4>
+			<p class="list-group-item-text">Admin: {{item.user_email}} <br> Description: {{item.description}}</p>
+		</a>
+		{% endfor %}
+	</div>
+{% endif %}
 {% endblock %}
