--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -5,12 +5,25 @@
 	<h1>Dashboard</h1>
 	<p class="lead"> Hello {{name}}! You're signed in with {{user_email}}</p>
 	<hr>
+	<p class="lead"> You administrate these groups: </p>
+	{% for group in groups %}
+		{% if user_email == group['user_email'] %}
+			<div class="col-lg-6">
+				<div class="btn-group btn-group-justified">
+					<a class="btn btn-default" href="{{url_for('group',group_id=group.group_id)}}">{{group.group_name}}</a>
+					<a class="btn btn-danger" href="{{url_for('manage_group',group_id=group.group_id)}}">Manage Group</a>
+				</div>
+			</div>
+		{% endif %}
+	{% endfor %}
+	<br><br>
+	<hr>
 	<p class="lead">Your Pending Requests:</p>
 	<!-- look from requests from all groups to this user -->
 	<hr>
 	<form method="GET" action="{{url_for('search')}}">
 		<div class="form-group">
-			<label class="control-label">Search Open Groups</label>
+			<label class="control-label">Search Open Groups by Name</label>
 			<div class="input-group">
 				<input type="text" class="form-control" name="query"/>
 				<span class="input-group-btn">
@@ -24,12 +37,60 @@
 		<h3><em>No Results Found</em></h3>
 	{% else %}
 		<div class="list-group">
-			{% for item in data %}
-			<a href="{{url_for('group', group_id=item.group_id)}}" class="list-group-item">
-				<h4 class="list-group-item-heading">{{ item["group_name"] }}</h4>
-				<p class="list-group-item-text">Admin: {{ item["user_email"] }} <br> Description: {{ item["description"] }} Status: {{ item["status"] }}</p>
-			</a>
+			{% for item in results %}
+			<li class="list-group-item">
+				<h4>{{ item["group_name"] }}</h4>
+				{% if item['in_users_groups'] == True %}
+					<a class="btn btn-default pull-right" style="display:inline-block" href="{{url_for('group', group_id=item.group_id)}}">Go to Group</a>
+				{% elif item['in_users_groups'] == False and item['joinable'] == True %}
+					<button type="button" class="btn btn-danger pull-right" style="display:inline-block" data-toggle="modal" data-target="#reqModal-{{item.group_id}}"><span class="glyphicon glyphicon-star-empty"></span> &nbsp; Request to Join</button>
+				{% else %}
+				{% endif %}
+				<p>Admin: {{ item["user_email"] }} <br> Description: {{ item["description"] }}</p>
+			</li>
 			{% endfor %}
 		</div>
 	{% endif %}
+{% endblock %}
+
+{% block modals %}
+	{% for item in results %}
+		{% if item['in_users_groups'] == False and item['joinable'] == True %}
+			<div class="modal fade" id="reqModal-{{item.group_id}}" tabindex="-1" role="dialog">
+			  <div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">X</span></button>
+			        <h4 class="modal-title">Request to Join: {{item.group_name}}</h4>
+			      </div>
+			      <div class="modal-body">
+			        <form id="user-req-group-{{item.group_id}}" method="POST" action="#">
+
+						    <div class="form-group">
+						    	<label class="control-label">Message</label>
+						    	<textarea name="message-{{item.group_id}}" id="message-{{item.group_id}}" class="form-control"></textarea>
+						    </div>
+
+					    </form>
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" class="btn btn-primary send" id="{{item.group_id}}">Send Request</button>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+
+			<script>
+				$('#send').click(function() {
+					var whichModal = $(this).attr('id');
+					if ($.trim($('#message-' + whichModal).val()) === '') {
+						alert('Include a message!');
+					}
+					else {
+						$('#user-req-group-' + whichModal).submit();
+					}
+				});
+			</script>
+		{% endif %}
+	{% endfor %}
 {% endblock %}
