--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -1,7 +1,19 @@
 {% extends "logged-in.html" %}
 {% block subtitle %}Welcome!{% endblock %}
 
+
 {% block content %}
+	{% with messages = get_flashed_messages(with_categories=true) %}
+  	{% if messages %}
+    	{% for category, message in messages %}
+				<div class="alert alert-dismissible alert-{{category}}">
+				  <button type="button" class="close" data-dismiss="alert">X</button>
+				  {{ message }}
+				</div>
+    	{% endfor %}
+  	{% endif %}
+	{% endwith %}
+	
 	<h1>Dashboard</h1>
 	<p class="lead"> Hello {{name}}! You're signed in with {{user_email}}</p>
 	<hr>
